@@ -1,0 +1,17 @@
+<?xml version='1.0'?>
+<TestDescriptor>
+    <Name>Test java-type binding for complex types</Name>
+    <Author>Werner Guttmann</Author>
+	<Comment>Test that ensures that the java-type of a binding for a complex type definition is actually used during source code generation</Comment>
+	<Category>basic capability</Category>
+	<SourceGeneratorTest>
+		<Schema>test.xsd</Schema>
+        <Root_Object random="false" dump="true">generated.PathType</Root_Object>
+        <Property_File>special-castorbuilder.properties</Property_File>
+    	<BindingFile>binding.xml</BindingFile> 	
+        <UnitTestCase>
+              <Name>Test Generation</Name>
+              <Input>input.xml</Input>
+        </UnitTestCase>
+	</SourceGeneratorTest>
+</TestDescriptor>
