@@ -1,0 +1,12 @@
+package base;
+
+import generated.Item;
+
+
+public class MyItem extends Item {
+
+	public void hello(){
+		System.out.println("name = " + getName());
+	}
+	
+}
