@@ -1,0 +1,7 @@
+<path>
+	<item name="name1"/>
+	<item name="name2"/>
+	<item name="name3"/>
+	<!--simpleItem>BLACK</simpleItem>
+	<simpleItem>WHITE</simpleItem-->
+</path>
