@@ -1,0 +1,5 @@
+#
+# XML namespace mapping to Java packages
+#
+org.exolab.castor.builder.nspackages=\
+  http://test=generated
